--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-select": "^5.7.0",
+    "reset-css": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
