--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@taak/react-modern-calendar-datepicker": "^3.1.6-1",
+    "date-fns": "^2.30.0",
     "fuse.js": "^6.6.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-paginate": "^8.2.0",
     "react-select": "^5.7.0",
     "reset-css": "^5.0.1"
